main: Add vertical swipe view for additional controls
This will be used to add controls for pumps, fermentors, etc.

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -12,5 +12,6 @@
         <file>../qml/BreweryControl/PIDButton.qml</file>
         <file>../qml/main.qml</file>
         <file>../qml/BreweryControl/qmldir</file>
+        <file>../qml/BreweryControl/ControllersSwipeView.qml</file>
     </qresource>
 </RCC>
