--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -12,5 +12,13 @@
         <file>../qml/BreweryControl/PIDButton.qml</file>
         <file>../qml/main.qml</file>
         <file>../qml/BreweryControl/qmldir</file>
+        <file>../qml/BreweryControl/Timers/HopTimer/HopTimer.qml</file>
+        <file>../qml/BreweryControl/Timers/HopTimer/LongPressMenu.qml</file>
+        <file>../qml/BreweryControl/Timers/HopTimer/qmldir</file>
+        <file>../qml/BreweryControl/Timers/HopTimer/RemainingTime.qml</file>
+        <file>../qml/BreweryControl/Timers/HopTimer/SetTimeMenu.qml</file>
+        <file>../qml/BreweryControl/Views/Timers/qmldir</file>
+        <file>../qml/BreweryControl/Views/Timers/TimersView.qml</file>
+        <file>../qml/BreweryControl/Views/Timers/AddTimerButton.qml</file>
     </qresource>
 </RCC>
