--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -12,5 +12,7 @@
         <file>../qml/BreweryControl/PIDButton.qml</file>
         <file>../qml/main.qml</file>
         <file>../qml/BreweryControl/qmldir</file>
+        <file>../qml/BreweryControl/TimersView.qml</file>
+        <file>../qml/BreweryControl/HopTimer.qml</file>
     </qresource>
 </RCC>
