--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -4,11 +4,7 @@
         <file>../fonts/Font Awesome 5 Free-Solid-900.otf</file>
         <file>../fonts/ImpactLabel-lVYZ.ttf</file>
         <file>../fonts/Segment7Standard.otf</file>
-        <file>../qml/BreweryControl/PIDController.qml</file>
-        <file>../qml/BreweryControl/PIDControllersView.qml</file>
         <file>../qml/BreweryControl/Constants.qml</file>
-        <file>../qml/BreweryControl/PID7Seg.qml</file>
-        <file>../qml/BreweryControl/PIDButton.qml</file>
         <file>../qml/main.qml</file>
         <file>../qml/BreweryControl/qmldir</file>
         <file>../qml/BreweryControl/Timers/HopTimer/HopTimer.qml</file>
@@ -21,5 +17,10 @@
         <file>../qml/BreweryControl/Views/Timers/AddTimerButton.qml</file>
         <file>../qml/BreweryControl/Views/Graphs/GraphView.qml</file>
         <file>../qml/BreweryControl/Views/Graphs/qmldir</file>
+        <file>../qml/BreweryControl/Views/PID/PIDControllersView.qml</file>
+        <file>../qml/BreweryControl/Views/PID/qmldir</file>
+        <file>../qml/BreweryControl/Views/PID/PID7Seg.qml</file>
+        <file>../qml/BreweryControl/Views/PID/PIDButton.qml</file>
+        <file>../qml/BreweryControl/Views/PID/PIDController.qml</file>
     </qresource>
 </RCC>
